# Electron-React-FastAPI

./: .env.example  .gitignore  ARCHITECTURE.md  FACEFUSION_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
backend/: .env.example  README.md  alembic.ini  database.py  facefusion_service.py  main.py  main_new.py  requirements.txt  scheduler.py  start.sh
backend/api/v1/: __init__.py  dashboard.py  image.py  print_router.py  session.py  target.py  tracking.py
backend/core/: __init__.py  config.py  dependencies.py
backend/exceptions/: __init__.py  api_exceptions.py  base.py
backend/middleware/: __init__.py  error_handler.py
backend/migrations/: env.py
backend/migrations/versions/: 7c23eac95081_add_participationhistory_table.py  f823a5a0fa14_initial_database_schema.py
backend/models/: __init__.py  participation.py  participation_history.py  print_log.py  target_profile.py  target_talent.py
backend/repositories/: __init__.py  base.py  participation_history_repo.py  participation_repo.py  print_log_repo.py  profile_repo.py  talent_repo.py
backend/schemas/: __init__.py  participation.py  participation_history.py  print_log.py  target.py
backend/scripts/: seed_data.py
backend/services/: __init__.py  image_service.py  print_service.py  session_service.py  statistics_service.py  tracking_service.py
backend/utils/: __init__.py  file_handler.py  response.py
data/: kiosk.db
docs/: 251120_1104-PARTICIPATION_HISTORY_GUIDE.md  251120_1113-API_ENDPOINTS.md  251121_0230-BACKEND_ARCHITECTURE.md  251121_0230-IMPLEMENTATION_SUMMARY.md  251122_1440-FACEFUSION_SETUP.md  API_SPECIFICATION.csv  DATABASE_SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/electron/: main.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CameraScreen.jsx  ConsentScreen.jsx  LoadingScreen.jsx  ProfileResultScreen.jsx  TalentResultScreen.jsx
frontend/src/services/: api.js
